Update links, cp, and added imgs

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
     <header>
-      <p>welcome!</p>
+      <div class="right">
+        <a href="https://instagram.com/thatartfriend">Instagram</a>
+    </div>
     </header>
     <body>
       <h1 id="my-art">
         my art | sophie zhang
       </h1>
+      <p>
+        some of the pieces i have made over the years &lt;3
+      </p>
       <div class="row">
         <div class="column">
           <img src="images/0.jpeg">
@@ -49,6 +54,6 @@
       </div>
     </body>
     <footer>
-      <p>made by <a href="https://instagram.com/thatartfriend">sophie</a> :)</p>
+      <p>© 2020-2021 Sophie Zhang </p>
     </footer>
 </html>
