--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         my art | sophie zhang
       </h1>
       <p>
-        some of the pieces i have made over the years &lt;3
+        some of the pieces i have made over the years.
       </p>
       <div class="row">
         <div class="column">
