--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Favicon - Generic -->
+    <link rel="icon" href="images/1.jpeg" type="image/jpeg">
+    <!-- Favicon - Chrome/Android -->
+    <link rel="shortcut icon" href="images/1.jpeg" type="image/jpeg">
+    <!-- Favicon - Safari/iOS -->
+    <link rel="apple-touch-icon" href="images/1.jpeg">
 
     <meta property="og:title" content="my art | sophie zhang" />
     <meta property="og:locale" content="en_US" />
