--- a/index.html
+++ b/index.html
@@ -27,40 +27,50 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
-    <header>
-      <div class="right">
-        <a href="https://instagram.com/thatartfriend">Instagram</a>
-    </div>
-    </header>
-    <body>
-      <h1 id="my-art">
-        my art | sophie zhang
-      </h1>
-      <p>
-        some of the pieces i have made over the years.
-      </p>
-      <div class="row">
-        <div class="column">
-          <img src="images/0.jpeg">
-          <img src="images/4.jpeg">
-          <img src="images/8.jpeg">
-        </div>
-        <div class="column">
-          <img src="images/1.jpeg">
-          <img src="images/5.jpeg">
-          <img src="images/9.jpeg">
-        </div>
-        <div class="column">
-          <img src="images/2.jpeg">
-          <img src="images/6.jpeg">
-        </div>
-        <div class="column">
-          <img src="images/3.jpeg">
-          <img src="images/7.gif">
-        </div>
+  <header>
+    <div class="right">
+      <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a>
+      <p style="display:inline">&nbsp;&nbsp;</p>
+      <a href="https://instagram.com/thatartfriend">Instagram</a>
+  </div>
+  </header>
+  <body>
+    <h1 id="my-art">
+      my art | sophie zhang
+    </h1>
+    <p>
+      some of the pieces i have made over the years.
+    </p>
+    <div class="row">
+      <div class="column">
+        <img class="myImages" id="myImg" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
+        <img class="myImages" id="myImg" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
+        <img class="myImages" id="myImg" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
       </div>
-    </body>
-    <footer>
-      <p>© 2020-2021 Sophie Zhang </p>
-    </footer>
+      <div class="column">
+        <img class="myImages" id="myImg" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
+        <img class="myImages" id="myImg" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
+        <img class="myImages" id="myImg" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
+      </div>
+      <div class="column">
+        <img class="myImages" id="myImg" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
+        <img class="myImages" id="myImg" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
+      </div>
+      <div class="column">
+        <img class="myImages" id="myImg" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
+        <img class="myImages" id="myImg" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
+      </div>
+    </div>
+
+    <div id="myModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="img01">
+      <div id="caption"></div>
+    </div>
+
+    <script src="js/script.js"></script>
+  </body>
+  <footer>
+    <p>© 2020-2021 <a href="https://github.com/sophiezhng">Sophie Zhang</a> </p>
+  </footer>
 </html>
