--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
     <p>
       some of the pieces i have made over the years.
     </p>
+    <h2 id="2021" class="year"><a href="#2021">2021</a></h2>
+    <div class="row">
+      <div class="column">
+        <img class="myImages" id="myImg" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
+      </div>
+      <div class="column">
+      </div>
+      <div class="column">
+      </div>
+      <div class="column">
+      </div>
+    </div>
+    <h2 id="2020" class="year"><a href="#2020">2020</a></h2>
     <div class="row">
       <div class="column">
         <img class="myImages" id="myImg" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
