Added slideshow feature

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
       </div>
     </div>
 
-    <div id="myModal" class="modal">
+    <div id="myModal" class="modal" style="text-align:center;">
       <span class="close">&times;</span>
+      <span class="prev">&#10094;</span>
       <img class="modal-content" id="img01">
+      <span class="next">&#10095;</span>
       <div id="caption"></div>
     </div>
 
