--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     <script src="js/script.js"></script>
   </body>
   <footer>
-    <p>© 2020-2021 <a href="https://github.com/sophiezhng">Sophie Zhang</a> </p>
+    <p>© 2020-2021 Sophie Zhang
+      <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
+    </p>
   </footer>
 </html>
