--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- Favicon - Generic -->
     <link rel="icon" href="images/1.jpeg" type="image/jpeg">
     <!-- Favicon - Chrome/Android -->
@@ -28,6 +28,10 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
   <header>
+    <label id="switch" class="switch">
+      <input type="checkbox" onchange="toggleTheme()" id="slider">
+      <span class="slider round"></span>
+  </label>
     <div class="right">
       <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a>
       <a href="https://instagram.com/thatartfriend">Instagram</a>
