Change font link to HTTPS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>my art | sophie zhang</title>
     
     <link rel="stylesheet" href="css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
   <header>
     <label id="switch" class="switch">
