Added an About page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <span class="slider round"></span>
   </label>
     <div class="right">
+      <a href="about">About</a>
       <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a>
       <a href="https://instagram.com/thatartfriend">Instagram</a>
     </div>
