Fixed About page dark-mode bug

--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
     <a href="../">&#x21A9; back</a>
     <h1>About</h1>
     <figure style="text-align: center;">
-      <img src="../images/9.jpg" alt=Self-portrait style="max-width: 400px;">
+      <img class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 400px;">
       <figcaption style="margin-top: 10px;font-size: 14px;"><i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper</figcaption>
     </figure>
     <p style="text-indent: 25px;"> I am an artist from Mississauga, Canada, who is interested in oil painting, gouache, 
@@ -56,6 +56,13 @@
       I made this page to have a place to show off some of my creations.</p>
     <p>Coded in HTML, CSS, and Javascript</p>
     <p>Contact: <a href="mailto:sophie.zhangg@icloud.com">sophie.zhangg@icloud.com</a></p>
+    <div id="myModal" class="modal" style="text-align:center;">
+      <span class="close">&times;</span>
+      <span class="prev">&#10094;</span>
+      <img class="modal-content" id="img01">
+      <span class="next">&#10095;</span>
+      <div id="caption"></div>
+    </div>
     <script src="../js/script.js"></script>
   </body>
   <footer>
