--- a/about/index.html
+++ b/about/index.html
@@ -42,20 +42,27 @@
     </div>
   </header>
   <body>
-    <a href="../">&#x21A9; back</a>
-    <h1>About</h1>
-    <figure style="text-align: center;">
-      <img class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 400px;">
-      <figcaption style="margin-top: 10px;font-size: 14px;"><i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper</figcaption>
-    </figure>
-    <p style="text-indent: 25px;"> I am an artist from Mississauga, Canada, who is interested in oil painting, gouache, 
-      portraits, sketching, and coding. Feel free to check out my <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">
-      YouTube channel</a>
-      and art <a href="https://instagram.com/thatartfriend">Instagram page</a> 
-      for some similar content by me. 
-      I made this page to have a place to show off some of my creations.</p>
-    <p>Coded in HTML, CSS, and Javascript</p>
-    <p>Contact: <a href="mailto:sophie.zhangg@icloud.com">sophie.zhangg@icloud.com</a></p>
+    <div class="wrapper">
+      <p><a href="../">&#x21A9; back</a></p>
+      <div id="left-side">
+        <figure style="margin: 0px; text-align: center !important;">
+        <img class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
+        <figcaption style="padding: 10px 0px 10px ;margin-bottom:20px;font-size: 14px;"><i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper</figcaption>
+      </figure>
+      </div>
+      <section id="right-side">
+        <h1>About</h1>
+        <p style="text-indent: 25px;"> I am an artist from Mississauga, Canada, who is interested in oil painting, gouache, 
+          portraits, sketching, and coding. Feel free to check out my <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">
+          YouTube channel</a>
+          and art <a href="https://instagram.com/thatartfriend">Instagram page</a> 
+          for some similar content by me. 
+          I made this page to have a place to show off some of my creations.</p>
+        <p>Coded in HTML, CSS, and Javascript</p>
+        <p>Contact: <a href="mailto:sophie.zhangg@icloud.com">sophie.zhangg@icloud.com</a></p>
+      </section>
+    </div>
+    
     <div id="myModal" class="modal" style="text-align:center;">
       <span class="close">&times;</span>
       <span class="prev">&#10094;</span>
@@ -65,7 +72,7 @@
     </div>
     <script src="../js/script.js"></script>
   </body>
-  <footer>
+  <footer id="fixed-footer">
     <p>© 2020-2021 Sophie Zhang
       <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
     </p>
