--- a/index.html
+++ b/index.html
@@ -42,46 +42,47 @@
     </div>
   </header>
   <body>
-    <h1 id="my-art">
-      my art | sophie zhang
-    </h1>
-    <p>
-      some of the pieces i have made over the years.
-    </p>
-    <h2 id="2021" class="year"><a href="#2021">2021</a></h2>
-    <div class="row">
-      <div class="column">
-        <img class="myImages" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
+    <div class="wrapper">
+      <h1 id="my-art">
+        my art | sophie zhang
+      </h1>
+      <p>
+        some of the pieces i have made over the years.
+      </p>
+      <h2 id="2021" class="year"><a href="#2021">2021</a></h2>
+      <div class="row">
+        <div class="column">
+          <img class="myImages" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
+        </div>
+        <div class="column">
+        </div>
+        <div class="column">
+        </div>
+        <div class="column">
+        </div>
       </div>
-      <div class="column">
-      </div>
-      <div class="column">
-      </div>
-      <div class="column">
+      <h2 id="2020" class="year"><a href="#2020">2020</a></h2>
+      <div class="row">
+        <div class="column">
+          <img class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
+          <img class="myImages" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
+          <img class="myImages" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
+        </div>
+        <div class="column">
+          <img class="myImages" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
+          <img class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
+          <img class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
+        </div>
+        <div class="column">
+          <img class="myImages" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
+          <img class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
+        </div>
+        <div class="column">
+          <img class="myImages" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
+          <img class="myImages" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
+        </div>
       </div>
     </div>
-    <h2 id="2020" class="year"><a href="#2020">2020</a></h2>
-    <div class="row">
-      <div class="column">
-        <img class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
-        <img class="myImages" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
-        <img class="myImages" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
-      </div>
-      <div class="column">
-        <img class="myImages" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
-        <img class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
-        <img class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
-      </div>
-      <div class="column">
-        <img class="myImages" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
-        <img class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
-      </div>
-      <div class="column">
-        <img class="myImages" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
-        <img class="myImages" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
-      </div>
-    </div>
-
     <div id="myModal" class="modal" style="text-align:center;">
       <span class="close">&times;</span>
       <span class="prev">&#10094;</span>
