Switch out back arrow

--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
   </header>
   <body>
     <div class="wrapper">
-      <p><a href="../">&#x21A9; back</a></p>
+      <p><a href="../">&#x2190; back</a></p>
       <div id="left-side">
         <figure style="margin: 0px; text-align: center !important;">
         <img class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
