Edit nav bar to list

--- a/about/index.html
+++ b/about/index.html
@@ -35,11 +35,11 @@
       <input type="checkbox" onchange="toggleTheme()" id="slider">
       <span class="slider round"></span>
   </label>
-    <div class="right">
-      <a href="">About</a>
-      <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a>
-      <a href="https://instagram.com/thatartfriend">Instagram</a>
-    </div>
+    <ul class="right">
+      <li><a href="">About</a></li>
+      <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a></li>
+      <li><a href="https://instagram.com/thatartfriend">Instagram</a></li>
+    </ul>
   </header>
   <body>
     <div class="wrapper">
