--- a/about/index.html
+++ b/about/index.html
@@ -52,12 +52,17 @@
       </div>
       <section id="right-side">
         <h1>About</h1>
-        <p style="text-indent: 25px;"> I am an artist from Mississauga, Canada, who is interested in oil painting, gouache, 
-          portraits, sketching, and coding. Feel free to check out my <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">
-          YouTube channel</a>
-          and art <a href="https://instagram.com/thatartfriend">Instagram page</a> 
-          for some similar content by me. 
-          I made this page to have a place to show off some of my creations.</p>
+        <p style="text-indent: 25px;"> I am an artist from the Greater Toronto Area in Canada, who is interested in oil painting, gouache, 
+          portraits, sketching, and coding. Feel free to subscribe to 
+          my <a href="index.xml">RSS feed</a> to get updated when I post new art on this page!</p>
+        <div id="socials">
+          <a href="index.xml" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
+          </a>
+          <a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg>
+          </a>
+          <a href="https://instagram.com/thatartfriend" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+          </a>
+        </div>
         <p>Coded in HTML, CSS, and Javascript</p>
         <p>Contact: <a href="mailto:sophie.zhangg@icloud.com">sophie.zhangg@icloud.com</a></p>
       </section>
