--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
   </header>
   <body>
     <div class="wrapper">
-      <h1 id="my-art">
-        my art | sophie zhang
-      </h1>
+        <h1 id="my-art" style="padding-right:10px; display: inline;">
+          my art | sophie zhang</h1>
+      <a href="index.xml" class="logo"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
+      </a>
       <p>
         some of the pieces i have made over the years.
       </p>
       <h2 id="2021" class="year"><a href="#2021">2021</a></h2>
       <div class="row">
         <div class="column">
-          <img class="myImages" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
+          <img id="self-portrait" class="myImages" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
         </div>
         <div class="column">
         </div>
@@ -64,22 +65,22 @@
       <h2 id="2020" class="year"><a href="#2020">2020</a></h2>
       <div class="row">
         <div class="column">
-          <img class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
-          <img class="myImages" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
-          <img class="myImages" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
+          <img id="in-our-hands" class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
+          <img id="aspire" class="myImages" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
+          <img id="hypercomplex-iii" class="myImages" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
         </div>
         <div class="column">
-          <img class="myImages" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
-          <img class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
-          <img class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
+          <img id="ladybug" class="myImages" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
+          <img id="sunset" class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
+          <img id="hypercomplex-ii" class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
         </div>
         <div class="column">
-          <img class="myImages" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
-          <img class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
+          <img id="blueberries" class="myImages" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
+          <img id="lighthouse" class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
         </div>
         <div class="column">
-          <img class="myImages" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
-          <img class="myImages" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
+          <img id="koi-fish" class="myImages" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
+          <img id="growth-animation" class="myImages" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
         </div>
       </div>
     </div>
