Edit title spacing properly

--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
   </header>
   <body>
     <div class="wrapper">
-        <h1 id="my-art" style="padding-right:10px; display: inline;">
-          my art | sophie zhang</h1>
-      <a href="index.xml" class="logo"><svg style="padding-top: 15px;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
-      </a>
+      <ul id="title-list">
+        <li><h1 id="my-art" style="display: inline;">
+          my art | sophie zhang</h1></li>
+        <li><a href="index.xml" class="logo"><svg style="padding-top: 6px;" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg>
+        </a></li>
+      </ul>
       <p>
         some of the pieces i have made over the years.
       </p>
