Open module for img at hash location

--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
       <p><a href="../">&#x2190; back</a></p>
       <div id="left-side">
         <figure style="margin: 0px; text-align: center !important;">
-        <img class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
+        <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
         <figcaption style="padding: 10px 0px 10px ;margin-bottom:20px;font-size: 14px;"><i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper</figcaption>
       </figure>
       </div>
