Added new images and a navigation bar

--- a/about/index.html
+++ b/about/index.html
@@ -36,14 +36,19 @@
       <span class="slider round"></span>
   </label>
     <ul class="right">
-      <li><a href="">About</a></li>
       <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a></li>
       <li><a href="https://instagram.com/thatartfriend">Instagram</a></li>
     </ul>
   </header>
   <body>
+    <div class="navigation">
+      <ul class="links">
+        <li><a href="../">Home</a></li>
+        <li><a href="">About</a></li>
+      </ul>
+    </div>
     <div class="wrapper">
-      <p><a href="../">&#x2190; back</a></p>
+      <p><a href="../">&#x2190; back to home</a></p>
       <div id="left-side">
         <figure style="margin: 0px; text-align: center !important;">
         <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
@@ -68,6 +73,11 @@
         <p>Coded in HTML, CSS, and Javascript</p>
         <p>Contact: <a href="mailto:sophie.zhangg@icloud.com">sophie.zhangg@icloud.com</a></p>
       </section>
+      <footer id="fixed-footer">
+        <p>© 2020-2021 Sophie Zhang
+          <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
+        </p>
+      </footer>
     </div>
     
     <div id="myModal" class="modal" style="text-align:center;">
@@ -79,9 +89,4 @@
     </div>
     <script src="../js/script.js"></script>
   </body>
-  <footer id="fixed-footer">
-    <p>© 2020-2021 Sophie Zhang
-      <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
-    </p>
-  </footer>
 </html>
