--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
       <span class="slider round"></span>
   </label>
     <ul class="right">
-      <li><a href="about">About</a></li>
       <li><a href="https://www.youtube.com/channel/UCONPV4aXmyoUNh3xbxZIYvQ">YouTube</a></li>
       <li><a href="https://instagram.com/thatartfriend">Instagram</a></li>
     </ul>
   </header>
   <body>
+    <div class="navigation">
+        <ul class="links">
+          <li><a href="">Home</a></li>
+          <li><a href="about">About</a></li>
+        </ul>
+    </div>
     <div class="wrapper">
       <ul id="title-list">
         <li><h1 id="my-art" style="display: inline;">
@@ -56,35 +61,50 @@
       <div class="row">
         <div class="column">
           <img id="self-portrait" class="myImages" src="images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper">
+          <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper">
         </div>
         <div class="column">
+          <img id="online-school" class="myImages" src="images/10.jpg" alt="<i>online school</i>, 2021, Graphite on paper">
+          <img id="faces-ii" class="myImages" src="images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper">
         </div>
         <div class="column">
+          <img id="self-portrait-ii" class="myImages" src="images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper">
+          <img id="faces-iii" class="myImages" src="images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper">
         </div>
         <div class="column">
+          <img id="relaxed" class="myImages" src="images/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper">
+          <img id="pastel-girl" class="myImages" src="images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper">
         </div>
       </div>
       <h2 id="2020" class="year"><a href="#2020">2020</a></h2>
       <div class="row">
         <div class="column">
           <img id="in-our-hands" class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas">
+          <img id="whiteboard" class="myImages" src="images/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard">
           <img id="aspire" class="myImages" src="images/4.jpeg" alt="<i>aspire</i>, Oil on canvas">
           <img id="hypercomplex-iii" class="myImages" src="images/8.jpeg" alt="<i>Hypercomplex mandelbulb fractals III</i>, Softology's Visions of Chaos">
         </div>
         <div class="column">
           <img id="ladybug" class="myImages" src="images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting">
           <img id="sunset" class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper">
-          <img id="hypercomplex-ii" class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
+          <img id="fruit-basket" class="myImages" src="images/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper">
         </div>
         <div class="column">
+          <img id="faces-i" class="myImages" src="images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper">
           <img id="blueberries" class="myImages" src="images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper">
           <img id="lighthouse" class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper">
         </div>
         <div class="column">
           <img id="koi-fish" class="myImages" src="images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper">
+          <img id="hypercomplex-ii" class="myImages" src="images/9.jpeg" alt="<i>Hypercomplex mandelbulb fractals II</i>, Softology's Visions of Chaos">
           <img id="growth-animation" class="myImages" src="images/7.gif" alt="<i>growth</i>, 2020, Digital animation">
         </div>
       </div>
+      <footer>
+        <p>© 2020-2021 Sophie Zhang
+          <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
+        </p>
+      </footer>
     </div>
     <div id="myModal" class="modal" style="text-align:center;">
       <span class="close">&times;</span>
@@ -96,9 +116,4 @@
 
     <script src="js/script.js"></script>
   </body>
-  <footer>
-    <p>© 2020-2021 Sophie Zhang
-      <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
-    </p>
-  </footer>
 </html>
