--- a/about/index.html
+++ b/about/index.html
@@ -43,8 +43,8 @@
   <body>
     <div class="navigation">
       <ul class="links">
-        <li><a href="../">Home</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
       </ul>
     </div>
     <div class="wrapper">
