Add highlight for current page

--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
     <div class="navigation">
       <ul class="links">
         <li><a href="/art">Home</a></li>
-        <li><a href="/art/about">About</a></li>
+        <li><a class ="highlighted" href="/art/about">About</a></li>
       </ul>
     </div>
     <div class="wrapper">
