--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <div class="navigation">
         <ul class="links">
-          <li><a href="/art">Home</a></li>
+          <li><a class ="highlighted" href="/art">Home</a></li>
         <li><a href="/art/about">About</a></li>
         </ul>
     </div>
