Separate into different pages

--- a/about/index.html
+++ b/about/index.html
@@ -45,6 +45,11 @@
       <ul class="links">
         <li><a href="/art">Home</a></li>
         <li><a class ="highlighted" href="/art/about">About</a></li>
+        <li><a href="/art/fractals">Fractals</a></li>
+        <li><a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
+        <li><a href="/art/faces-collection">The Faces Collection</a></li>
+        <p class="nav-header">Archives</p>
+        <li><a href="/art/2020-archive">2020</a></li>
       </ul>
     </div>
     <div class="wrapper">
