--- a/2020-archive/index.html
+++ b/2020-archive/index.html
@@ -42,15 +42,16 @@
   </header>
   <body>
     <div class="navigation">
-        <ul class="links">
-          <li><a href="/art">Home</a></li>
-          <li><a href="/art/about">About</a></li>
-          <li><a href="/art/fractals">Fractals</a></li>
-          <li><a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
-          <li><a href="/art/faces-collection">The Faces Collection</a></li>
-          <p class="nav-header">Archives</p>
-          <li><a class ="highlighted" href="/art/2020-archive">2020</a></li>
-        </ul>
+      <ul class="links">
+        <li><a href="/art">Home</a></li>
+        <li><a href="/art/about">About</a></li>
+        <li><a href="/art/fractals">Fractals</a></li>
+        <li><a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
+        <li><a href="/art/faces-collection">The Faces Collection</a></li>
+        <p class="nav-header">Archives</p>
+        <li><a href="/art/2021-archive">2021</a></li>
+        <li><a class ="highlighted" href="/art/2020-archive">2020</a></li>
+      </ul>
     </div>
     <div class="wrapper">
       <h1 style="margin-bottom: 0px;">2020</h1>
