--- a/2021-archive/index.html
+++ b/2021-archive/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="Paintings, sketches, and more by Sophie Zhang" />
     <meta property="twitter:title" content="my art | sophie zhang" />
 
-    <title>the faces collection - my art | sophie zhang</title>
+    <title>2021 - my art | sophie zhang</title>
     
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -47,32 +47,34 @@
           <li><a href="/art/about">About</a></li>
           <li><a href="/art/fractals">Fractals</a></li>
           <li><a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
-          <li><a class ="highlighted" href="/art/faces-collection">The Faces Collection</a></li>
+          <li><a href="/art/faces-collection">The Faces Collection</a></li>
           <p class="nav-header">Archives</p>
-          <li><a href="/art/2021-archive">2021</a></li>
+          <li><a class ="highlighted" href="/art/2021-archive">2021</a></li>
           <li><a href="/art/2020-archive">2020</a></li>
         </ul>
     </div>
     <div class="wrapper">
-      <h1>the faces collection</h1>
+      <h1 style="margin-bottom: 0px;">2021</h1>
+      <p style="margin-top: 0px; font-size: small;">[archive]</p>
       <p style="text-indent: 25px;">
+        Still in progress.
       </p>
       <div class="row">
         <div class="column">
           <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" width="100px">
-          <img id="faces-i" class="myImages" src="../images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" width="100px">
+          <img id="delicate" class="myImages" src="../images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px">
         </div>
         <div class="column">
+          <img id="online-school" class="myImages" src="../images/10.jpg" alt="<i>online school</i>, 2021, Graphite on paper" width="100px">
           <img id="faces-ii" class="myImages" src="../images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" width="100px">
-          <img id="whiteboard" class="myImages" src="../images/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" width="100px">
         </div>
         <div class="column">
           <img id="self-portrait-ii" class="myImages" src="../images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" width="100px">
           <img id="faces-iii" class="myImages" src="../images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" width="100px">
         </div>
         <div class="column">
+          <img id="relaxed" class="myImages" src="../images/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" width="100px">
           <img id="pastel-girl" class="myImages" src="../images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" width="100px">
-          <img id="aspire" class="myImages" src="../images/4.jpeg" alt="<i>aspire</i>, Oil on canvas" width="100px">
         </div>
       </div>
       <footer>
