--- a/about/index.html
+++ b/about/index.html
@@ -49,6 +49,7 @@
         <li><a href="/art/gouache-and-watercolor">Gouache and Watercolor</a></li>
         <li><a href="/art/faces-collection">The Faces Collection</a></li>
         <p class="nav-header">Archives</p>
+        <li><a href="/art/2021-archive">2021</a></li>
         <li><a href="/art/2020-archive">2020</a></li>
       </ul>
     </div>
