Update width of home page img

--- a/index.html
+++ b/index.html
@@ -64,13 +64,8 @@
         some of the pieces i have made over the years.
       </p>
       <h2>recent</h2>
-      <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="30%">
-      <img id="faces-i" class="myImages" src="images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" width="30%" style="display: none;">
-      <img id="in-our-hands" class="myImages" src="images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas" width="30%" style="display: none;">
-      <img id="lighthouse" class="myImages" src="images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper" width="30%" style="display: none;">
-      <img id="sunset" class="myImages" src="images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper" width="30%" style="display: none;">
-      <img id="fruit-basket" class="myImages" src="images/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" width="30%" style="display: none;">
-
+      <div class="column">
+        <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px">
       <footer>
         <p>© 2020-2021 Sophie Zhang
           <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
