Add extra columns

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       <h2>recent</h2>
       <div class="column">
         <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px">
+      </div>
+      <div class="column"></div>
+      <div class="column"></div>
+      <div class="column"></div>
       <footer>
         <p>© 2020-2021 Sophie Zhang
           <a href="https://github.com/sophiezhng/art" style="float: right;">View on GitHub</a>
