--- a/faces-collection/index.html
+++ b/faces-collection/index.html
@@ -59,20 +59,20 @@
       </p>
       <div class="row">
         <div class="column">
-          <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" width="100px">
-          <img id="faces-i" class="myImages" src="../images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" width="100px">
+          <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" width="100px" loading="lazy">
+          <img id="faces-i" class="myImages" src="../images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="faces-ii" class="myImages" src="../images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" width="100px">
-          <img id="whiteboard" class="myImages" src="../images/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" width="100px">
+          <img id="faces-ii" class="myImages" src="../images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
+          <img id="whiteboard" class="myImages" src="../images/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="self-portrait-ii" class="myImages" src="../images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" width="100px">
-          <img id="faces-iii" class="myImages" src="../images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" width="100px">
+          <img id="self-portrait-ii" class="myImages" src="../images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" width="100px" loading="lazy">
+          <img id="faces-iii" class="myImages" src="../images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="pastel-girl" class="myImages" src="../images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" width="100px">
-          <img id="aspire" class="myImages" src="../images/4.jpeg" alt="<i>aspire</i>, Oil on canvas" width="100px">
+          <img id="pastel-girl" class="myImages" src="../images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
+          <img id="aspire" class="myImages" src="../images/4.jpeg" alt="<i>aspire</i>, Oil on canvas" width="100px" loading="lazy">
         </div>
       </div>
       <footer>
