--- a/fractals/index.html
+++ b/fractals/index.html
@@ -62,18 +62,18 @@
       </p>
       <div class="row">
         <div class="column">
-          <img id="hypercomplex-i" class="myImages" src="../images/22.jpg" alt="<i>Hypercomplex Mandelbulb fractals I</i>, Softology's Visions of Chaos" width="100px">
-          <img id="hypercomplex-ii" class="myImages" src="../images/9.jpeg" alt="<i>Hypercomplex Mandelbulb fractals II</i>, Softology's Visions of Chaos" width="100px">
+          <img id="hypercomplex-i" class="myImages" src="../images/22.jpg" alt="<i>Hypercomplex Mandelbulb fractals I</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
+          <img id="hypercomplex-ii" class="myImages" src="../images/9.jpeg" alt="<i>Hypercomplex Mandelbulb fractals II</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="hypercomplex-iii" class="myImages" src="../images/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" width="100px">
-          <img id="hypercomplex-iv" class="myImages" src="../images/23.jpg" alt="<i>Hypercomplex Mandelbulb fractals IV</i>, Softology's Visions of Chaos" width="100px">
+          <img id="hypercomplex-iii" class="myImages" src="../images/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
+          <img id="hypercomplex-iv" class="myImages" src="../images/23.jpg" alt="<i>Hypercomplex Mandelbulb fractals IV</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="hypercomplex-v" class="myImages" src="../images/24.jpg" alt="<i>Hypercomplex Mandelbulb fractals V</i>, Softology's Visions of Chaos" width="100px">
+          <img id="hypercomplex-v" class="myImages" src="../images/24.jpg" alt="<i>Hypercomplex Mandelbulb fractals V</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="clouds-fractal" class="myImages" src="../images/25.jpg" alt="<i>cloud</i>, Softology's Visions of Chaos" width="100px">
+          <img id="clouds-fractal" class="myImages" src="../images/25.jpg" alt="<i>cloud</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
         </div>
       </div>
       <footer>
