--- a/2021-archive/index.html
+++ b/2021-archive/index.html
@@ -61,20 +61,20 @@
       </p>
       <div class="row">
         <div class="column">
-          <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" width="100px">
-          <img id="delicate" class="myImages" src="../images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px">
+          <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" width="100px" loading="lazy">
+          <img id="delicate" class="myImages" src="../images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="online-school" class="myImages" src="../images/10.jpg" alt="<i>online school</i>, 2021, Graphite on paper" width="100px">
-          <img id="faces-ii" class="myImages" src="../images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" width="100px">
+          <img id="online-school" class="myImages" src="../images/10.jpg" alt="<i>online school</i>, 2021, Graphite on paper" width="100px" loading="lazy">
+          <img id="faces-ii" class="myImages" src="../images/16.jpg" alt="<i>faces II</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="self-portrait-ii" class="myImages" src="../images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" width="100px">
-          <img id="faces-iii" class="myImages" src="../images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" width="100px">
+          <img id="self-portrait-ii" class="myImages" src="../images/11.jpg" alt="<i>Self-portrait II</i>, 2021, Pencil crayon, ink, and graphite on paper" width="100px" loading="lazy">
+          <img id="faces-iii" class="myImages" src="../images/17.jpg" alt="<i>faces III</i>, 2021, Graphite on paper" width="100px" loading="lazy">
         </div>
         <div class="column">
-          <img id="relaxed" class="myImages" src="../images/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" width="100px">
-          <img id="pastel-girl" class="myImages" src="../images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" width="100px">
+          <img id="relaxed" class="myImages" src="../images/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
+          <img id="pastel-girl" class="myImages" src="../images/21.jpg" alt="<i>PASTEL GIRL</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
         </div>
       </div>
       <footer>
