--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
     <div class="wrapper">
       <div id="left-side">
         <figure style="margin: 0px; text-align: center !important;">
-        <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;">
+        <img id="self-portrait" class="myImages" src="../images/9.jpg" alt="<i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper" style="max-width: 100%;" loading="lazy">
         <figcaption style="padding: 10px 0px 10px ;margin-bottom:20px;font-size: 14px;"><i>Self-portrait</i>, 2021, Marker, ink, and graphite on paper</figcaption>
       </figure>
       </div>
