--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </p>
       <h2>recent</h2>
       <div class="column">
-        <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px">
+        <img id="delicate" class="myImages" src="images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px" loading="lazy">
       </div>
       <div class="column"></div>
       <div class="column"></div>
