--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     <link rel="stylesheet"
       href='https://fonts.googleapis.com/css?family=Roboto'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5L3E8JK9TV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5L3E8JK9TV');
+    </script>
   </head>
   <header>
     <label id="switch" class="switch">
