Add thumbnails instead of loading full images

--- a/gouache-and-watercolor/index.html
+++ b/gouache-and-watercolor/index.html
@@ -59,18 +59,18 @@
       </p>
       <div class="row">
         <div class="column">
-          <img id="fruit-basket" class="myImages" src="../images/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" width="100px" loading="lazy">
-          <img id="koi-fish" class="myImages" src="../images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper" width="100px" loading="lazy">
+          <img id="fruit-basket" class="myImages" src="../thumbnails/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" data-src="../images/19.jpg" loading="lazy">
+          <img id="koi-fish" class="myImages" src="../thumbnails/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper" data-src="../images/3.jpeg" loading="lazy">
         </div>
         <div class="column">
-          <img id="lighthouse" class="myImages" src="../images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper" width="100px" loading="lazy">
-          <img id="relaxed" class="myImages" src="../images/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" width="100px" loading="lazy">
+          <img id="lighthouse" class="myImages" src="../thumbnails/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper" data-src="../images/6.jpeg" loading="lazy">
+          <img id="relaxed" class="myImages" src="../thumbnails/14.jpg" alt="<i>relaxed</i>, 2021, Watercolor and graphite on paper" data-src="../images/14.jpg" loading="lazy">
         </div>
         <div class="column">
-          <img id="sunset" class="myImages" src="../images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper" width="100px" loading="lazy">
+          <img id="sunset" class="myImages" src="../thumbnails/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper" data-src="../images/5.jpeg" loading="lazy">
         </div>
         <div class="column">
-          <img id="delicate" class="myImages" src="../images/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" width="100px" loading="lazy">
+          <img id="delicate" class="myImages" src="../thumbnails/20.jpg" alt="<i>delicate</i>, 2021, Watercolor and ink on paper" data-src="../images/20.jpg" loading="lazy">
         </div>
       </div>
       <footer>
