--- a/2020-archive/index.html
+++ b/2020-archive/index.html
@@ -63,25 +63,25 @@
       </p>
       <div class="row">
         <div class="column">
-          <img id="in-our-hands" class="myImages" src="../images/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas" width="100px" loading="lazy">
-          <img id="whiteboard" class="myImages" src="../images/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" width="100px" loading="lazy">
-          <img id="aspire" class="myImages" src="../images/4.jpeg" alt="<i>aspire</i>, Oil on canvas" width="100px" loading="lazy">
-          <img id="hypercomplex-iii" class="myImages" src="../images/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
+          <img id="in-our-hands" class="myImages" src="../thumbnails/0.jpeg" alt="<i>In Our Hands</i>, 2020, Oil on canvas" data-src="../images/0.jpeg" loading="lazy">
+          <img id="whiteboard" class="myImages" src="../thumbnails/18.jpg" alt="<i><q>the whiteboard</q></i>, 2020, Dry-erase marker on whitboard" data-src="../images/18.jpg" loading="lazy">
+          <img id="aspire" class="myImages" src="../thumbnails/4.jpeg" alt="<i>aspire</i>, Oil on canvas" data-src="../images/4.jpeg" loading="lazy">
+          <img id="hypercomplex-iii" class="myImages" src="../thumbnails/8.jpeg" alt="<i>Hypercomplex Mandelbulb fractals III</i>, Softology's Visions of Chaos" data-src="../images/8.jpeg" loading="lazy">
         </div>
         <div class="column">
-          <img id="ladybug" class="myImages" src="../images/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting" width="100px" loading="lazy">
-          <img id="sunset" class="myImages" src="../images/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper" width="100px" loading="lazy">
-          <img id="fruit-basket" class="myImages" src="../images/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" width="100px" loading="lazy">
+          <img id="ladybug" class="myImages" src="../thumbnails/1.jpeg" alt="<i>ladybug</i>, 2020, Digital painting" data-src="../images/1.jpeg" loading="lazy">
+          <img id="sunset" class="myImages" src="../thumbnails/5.jpeg" alt="<i>sunset</i>, 2020, Gouache on paper" data-src="../images/5.jpeg" loading="lazy">
+          <img id="fruit-basket" class="myImages" src="../thumbnails/19.jpg" alt="<i>october fruit basket</i>, 2020, Gouache on paper" data-src="../images/19.jpg" loading="lazy">
         </div>
         <div class="column">
-          <img id="faces-i" class="myImages" src="../images/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" width="100px" loading="lazy">
-          <img id="blueberries" class="myImages" src="../images/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper" width="100px" loading="lazy">
-          <img id="lighthouse" class="myImages" src="../images/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper" width="100px" loading="lazy">
+          <img id="faces-i" class="myImages" src="../thumbnails/12.jpg" alt="<i>faces I</i>, 2020, Pencil crayon on paper" data-src="../images/12.jpg" loading="lazy">
+          <img id="blueberries" class="myImages" src="../thumbnails/2.jpeg" alt="<i>blueberries</i>, 2020, Ballpoint pen on paper" data-src="../images/2.jpeg" loading="lazy">
+          <img id="lighthouse" class="myImages" src="../thumbnails/6.jpeg" alt="<i>lighthouse</i>, 2020, Gouache on paper" data-src="../images/6.jpeg" loading="lazy">
         </div>
         <div class="column">
-          <img id="koi-fish" class="myImages" src="../images/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper" width="100px" loading="lazy">
-          <img id="hypercomplex-ii" class="myImages" src="../images/9.jpeg" alt="<i>Hypercomplex Mandelbulb fractals II</i>, Softology's Visions of Chaos" width="100px" loading="lazy">
-          <img id="growth-animation" class="myImages" src="../images/7.gif" alt="<i>growth</i>, 2020, Digital animation" width="100px" loading="lazy">
+          <img id="koi-fish" class="myImages" src="../thumbnails/3.jpeg" alt="<i>koi fish</i>, 2020, Gouache on paper" data-src="../images/3.jpeg" loading="lazy">
+          <img id="hypercomplex-ii" class="myImages" src="../thumbnails/9.jpeg" alt="<i>Hypercomplex Mandelbulb fractals II</i>, Softology's Visions of Chaos" data-src="../images/9.jpeg" loading="lazy">
+          <img id="growth-animation" class="myImages" src="../thumbnails/7.gif" alt="<i>growth</i>, 2020, Digital animation" data-src="../images/7.gif" loading="lazy">
         </div>
       </div>
       <footer>
